# microsoft_mail

./: Cargo.toml  Justfile
examples/: email.rs  me.rs  send_email.rs
src/: lib.rs
src/model/: attachment.rs  body.rs  email.rs  me.rs  mod.rs  page.rs  recipient.rs
src/request/: get_message.rs  list_attachments.rs  list_messages.rs  mod.rs  send_email.rs
